# quasimodo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/instructions/: codejournal-minimal.instructions.md  native-macos-hunch.instructions.md
.github/prompts/: end-session-codejournal.prompt.md  start-session-codejournal.prompt.md
hooks/: quasimodo.zsh
scripts/: install_local.sh  setup_aliases.sh
src/: bank.rs  filter.rs  lib.rs  main.rs  notfound.rs  prompt.rs
tests/: integration_ollama.rs
