[package]
name = "quasimodo"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "build-bank"
path = "src/bin/build_bank.rs"
